# park-accessibility

./: README.md  main.py  pyproject.toml
Amsterdam_park_accessibility/: analysis.py  data_processing.py  visualization.py
data/: parks.geojson
src/park_access/: map_folium.py  run_download.py  service.py  viz.py
